add class GameBlock
universal object GameBlock

--- a/MovedBlocks.vcxproj
+++ b/MovedBlocks.vcxproj
@@ -79,9 +79,15 @@
   <ItemGroup>
     <ClCompile Include="helpers.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mouse.cpp" />
+    <ClCompile Include="objects.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helpers.h" />
+    <ClInclude Include="mouse.h" />
+    <ClInclude Include="objects.h" />
+    <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
