--- a/MovedBlocks.vcxproj.filters
+++ b/MovedBlocks.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="objects.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parserXmlMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helpers.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="objects.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parserXmlMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
