--- a/MovedBlocks.vcxproj
+++ b/MovedBlocks.vcxproj
@@ -77,6 +77,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="characters.cpp" />
     <ClCompile Include="helpers.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mouse.cpp" />
@@ -85,6 +86,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="characters.h" />
     <ClInclude Include="helpers.h" />
     <ClInclude Include="mouse.h" />
     <ClInclude Include="objects.h" />
