--- a/MovedBlocks.vcxproj.filters
+++ b/MovedBlocks.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="parserXmlMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="characters.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helpers.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parserXmlMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="characters.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
